@@ -37,10 +37,10 @@
 
 <property>
   <name>hadoop.job.history.location</name>
-  <value>file://${hadoop.log.dir}/history</value>
+  <value></value>
   <description> If job tracker is static the history files are stored 
-  in this single well known place. By default, it is in the local 
-  file system at ${hadoop.log.dir}/history.
+  in this single well known place. If No value is set here, by default,
+  it is in the local file system at ${hadoop.log.dir}/history.
   </description>
 </property>
 
